fix (Navbar) : correct z-index

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   color: white;
-  z-index: 1;
+  z-index: 2;
   background: linear-gradient(to top, transparent 0%, rgb(0, 0, 0, 0.3) 50%);
 }
 
